Measurement fragment shows graph
- Now clicking on a measurement also will display a line chart,
  which displays the Glucose (mg/dl) value over time.

--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".view.graphs.GraphsFragment"
-  >
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+  <data>
+    <variable
+      name="viewModel"
+      type="hochschule.de.bachelorthesis.viewmodels.GraphsViewModel"/>
+  </data>
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentEnd="true"
-    android:layout_centerVertical="true"
-    android:layout_marginStart="96dp"
-    android:layout_marginTop="235dp"
-    android:layout_marginEnd="95dp"
-    android:layout_marginBottom="235dp"
-    android:text="Graph fragment"
-    android:textColor="#000000"
-    android:textSize="30dp"
-    android:textStyle="bold"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+  <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <com.github.mikephil.charting.charts.LineChart
+      android:id="@+id/lineChart"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+    </com.github.mikephil.charting.charts.LineChart>
+  </RelativeLayout>
+</layout>
