--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -186,6 +186,32 @@
           android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
           android:textColor="@color/colorPrimary"/>
 
+        <TextView
+          android:id="@+id/y_axis"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:text="@string/glucose_mg_dl"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
+
+        <com.github.mikephil.charting.charts.LineChart
+          android:id="@+id/test"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          android:layout_width="match_parent"
+          android:layout_height="200dp">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <TextView
+          android:id="@+id/x_axis"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginEnd="16dp"
+          android:layout_marginBottom="32dp"
+          android:gravity="end"
+          android:text="@string/time_min"
+          android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
+
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
