--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -12,7 +12,8 @@
     <com.github.mikephil.charting.charts.LineChart
       android:id="@+id/lineChart"
       android:layout_width="match_parent"
-      android:layout_height="match_parent">
+      android:layout_height="match_parent"
+      android:layout_margin="32dp">
     </com.github.mikephil.charting.charts.LineChart>
   </RelativeLayout>
 </layout>
