Create Test Bar chart
- Preparation for the bar chart to compare foods

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,7 +11,7 @@
     android:title="@string/title_my_food"/>
 
   <item
-    android:id="@+id/graphsFragment"
+    android:id="@+id/graphsFoodSingleFragment"
     android:icon="@drawable/ic_event_white_24dp"
     android:title="Graphs"/>
 
