--- a/app/src/main/res/layout/fragment_measurements.xml
+++ b/app/src/main/res/layout/fragment_measurements.xml
@@ -13,14 +13,12 @@
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+      android:layout_height="match_parent"/>
 
     <hochschule.de.bachelorthesis.widget.BetterFloatingActionButton
       android:id="@+id/add"
