--- a/app/src/main/res/layout/fragment_food_overview.xml
+++ b/app/src/main/res/layout/fragment_food_overview.xml
@@ -136,7 +136,7 @@
         <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:text="@string/amount"
+          android:text="@string/amount_measurements"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
         <TextView
