--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -195,7 +195,7 @@
           android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>
 
         <com.github.mikephil.charting.charts.LineChart
-          android:id="@+id/test"
+          android:id="@+id/lineChart"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_width="match_parent"
