--- a/app/src/main/res/layout/item_measurement.xml
+++ b/app/src/main/res/layout/item_measurement.xml
@@ -1,69 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
+<GridLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:orientation="vertical"
-  android:paddingStart="16dp"
-  android:paddingTop="8dp"
-  android:paddingEnd="16dp"
-  android:paddingBottom="8dp">
+  android:columnCount="5"
+  android:rowCount="1"
+  android:layout_marginTop="8dp"
+  android:layout_marginStart="16dp"
+  android:orientation="horizontal">
 
   <TextView
     android:id="@+id/amount"
     style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="wrap_content"
+    android:layout_width="60dp"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:text="Amount"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+    android:text="1235 ml"/>
 
   <TextView
     android:id="@+id/date"
     style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="wrap_content"
+    android:layout_width="90dp"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:text="Date"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toEndOf="@+id/amount"
-    app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+    android:text="24.06.2019"/>
 
   <TextView
     android:id="@+id/max_glucose"
     style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="wrap_content"
+    android:layout_width="40dp"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="36dp"
-    android:text="200"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/avg_glucose"
-    app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+    android:text="200"/>
 
   <TextView
     android:id="@+id/avg_glucose"
     style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="wrap_content"
+    android:layout_width="40dp"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="73dp"
-    android:text="120"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+    android:text="120"/>
 
   <TextView
     android:id="@+id/rating"
     style="@style/TextAppearance.MaterialComponents.Body1"
-    android:layout_width="wrap_content"
+    android:layout_width="60dp"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="7dp"
-    android:text="good"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_marginEnd="16dp"
+    android:layout_columnWeight="1"
+    android:gravity="center"
+    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+    android:text="unrated"/>
+</GridLayout>
